Closed Bug 1908473 Opened 10 months ago Closed 10 months ago

Widevine not available in private browsing mode on 129 on Windows

Categories

(Core :: Audio/Video: Playback, defect, P1)

Desktop
Windows 11
defect

Tracking

()

VERIFIED FIXED
130 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox128 --- unaffected
firefox129 + verified
firefox130 + verified

People

(Reporter: Gijs, Assigned: alwu)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Originally encountered trying to use https://open.spotify.com/ , which produces an error saying "Playback of protected content is not enabled."

A simpler testcase (no login) is:

  1. ensure DRM is enabled and you have a downloaded CDM for Widevine
  2. open private browsing window
  3. open https://shaka-player-demo.appspot.com/demo/

ER:

Sintel widevine demo is playable

AR:

Sintel widevine demo is greyed out and can't be played

On Spotify, I got an Uncaught (in promise) EMEError: No supported keysystem was found error.

I'm told :alwu knows what's up in this area. :-)

Flags: needinfo?(alwu)
Assignee: nobody → alwu
Component: Audio/Video: GMP → Audio/Video: Playback
Flags: needinfo?(alwu)
Keywords: regression
Regressed by: 1896948
Severity: -- → S3
Priority: -- → P1

Set release status flags based on info from the regressing bug 1896948

The bug is marked as tracked for firefox129 (beta) and tracked for firefox130 (nightly). However, the bug still has low severity.

:jimm, could you please increase the severity for this tracked bug? If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(jmathies)
Flags: needinfo?(jmathies)

Comment on attachment 9413325 [details]
Bug 1908473 - pass correct parameter for hardware decryption.

Beta/Release Uplift Approval Request

  • User impact if declined: Widevine doesn't work in the private window on Windows
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Follow the comment 0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very small change which is tweaking an incorrect parameter. That doesn't introduce any new ability or structural change.
  • String changes made/needed:
  • Is Android affected?: Unknown
Attachment #9413325 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ad21b8997d99 pass correct parameter for hardware decryption. r=media-playback-reviewers,padenot
Status: NEW → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch

Comment on attachment 9413325 [details]
Bug 1908473 - pass correct parameter for hardware decryption.

Approved for 129.0b7

Attachment #9413325 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Verified as fixed in our latest 129.0b7 as well as our latest Nightly build 130.0a1 (2024-07-22).

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: