Bug 1908473 - pass correct parameter for hardware decryption. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D216846